Fix white-on-white in dark mode

--- a/src/freecell/style.css
+++ b/src/freecell/style.css
@@ -174,6 +174,11 @@ main {
     color: red;
 }
 
+.card .Spades,
+.card .Clubs {
+    color: black;
+}
+
 .winner {
     font-size: xx-large;
     color: var(--accent);
